// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiImage is rendered 1`] = `
<figure
  class="euiImage testClass1 testClass2 emotion-euiImage"
>
  <img
    alt="alt"
    aria-label="aria-label"
    class="emotion-euiImage__img-l"
    data-test-subj="test subject string"
    src="/cat.jpg"
  />
</figure>
`;

exports[`EuiImage is rendered and allows fullscreen 1`] = `
<figure
  class="euiImage testClass1 testClass2 emotion-euiImage-allowFullScreen"
>
  <button
    aria-label="Open fullscreen alt image"
    class="emotion-euiImage__button-fullWidth"
    data-test-subj="activateFullScreenButton"
    type="button"
  >
    <img
      alt="alt"
      aria-label="aria-label"
      class="emotion-euiImage__img-l"
      data-test-subj="test subject string"
      src="/cat.jpg"
    />
    <span
      class="emotion-euiImage__icon"
      color="ghost"
      data-euiicon-type="fullScreen"
    />
  </button>
</figure>
`;

exports[`EuiImage is rendered with a float 1`] = `
<figure
  class="euiImage emotion-euiImage-left"
>
  <img
    alt="alt"
    class="emotion-euiImage__img-original"
    src="/cat.jpg"
  />
</figure>
`;

exports[`EuiImage is rendered with a margin 1`] = `
<figure
  class="euiImage emotion-euiImage-l"
>
  <img
    alt="alt"
    class="emotion-euiImage__img-original"
    src="/cat.jpg"
  />
</figure>
`;

exports[`EuiImage is rendered with a node as the caption 1`] = `
<figure
  class="euiImage emotion-euiImage"
>
  <img
    alt="alt"
    class="emotion-euiImage__img-original"
    src="/cat.jpg"
  />
  <figcaption
    class="emotion-euiImage__caption"
  >
    <span>
      caption
    </span>
  </figcaption>
</figure>
`;

exports[`EuiImage is rendered with custom size 1`] = `
<figure
  class="euiImage emotion-euiImage"
>
  <img
    alt="alt"
    class="emotion-euiImage__img-customSize"
    src="/cat.jpg"
  />
</figure>
`;

exports[`EuiImage is rendered with src 1`] = `
<figure
  class="euiImage emotion-euiImage-left"
>
  <img
    alt="alt"
    class="emotion-euiImage__img-original"
    src="/cat.jpg"
  />
</figure>
`;
